Revision history for App-Anchr

{{$NEXT}}

0.5.4 2017-12-23T22:39:37Z
    - Add gen_realClean() and gen_insertSize() to `anchr template`
    - Use tadpole to create k-unitigs
    - Remove "pe.cor.log"
    - Don't overwrite statReads.md
    - Update Travis config from linuxbrew

0.5.3 2017-12-20T04:47:07Z
    - Also remove intermediate illumina reads in 0_cleanup.sh
    - Can skip fastqc and kmergenie
    - Add gen_master(), gen_cleanup(), gen_anchorLong(), gen_anchorFill(), gen_spades() and gen_platanus() to `anchr template`
    - --coverage2 to --cov2; --coverage3 to --cov3

0.5.2 2017-12-17T20:51:24Z
    - s/down_sampling/downSampling/g
    - Use `find` to get file list of anchors
        - reverse sort files, so that Q30L60X80 will be infile_0
    - --coverage3 can be "all"
    - Add gen_canu(), gen_statCanu(), gen_statFinal() and gen_quast() to `anchr template`
    - Less columns in statQuorum and statAnchors

0.5.1 2017-12-15T18:15:33Z
    - Extract complex bash codes to .tt2
    - --coverage2 can be "all"
    - SE as examples for LSF
    - Merge "Adapter filtering" into quorum

0.5.0 2017-12-14T23:15:44Z
    - Add command `anchr template`
    - Simplify e_coli processing steps
    - Don't check GraphViz.pm

0.4.9 2017-12-14T19:15:44Z
    - Use common bash headers, header.tt2

0.4.8 2017-12-13T04:31:24Z
    - Add --sample to `anchr trim`
    - Move bash templates to share/
        - `anchr anchors`
        - `anchr kunitigs`
        - `anchr quorum`
        - `anchr trim`
    - Add --tmp to some commands
    - Bring anchor2 back

0.4.7 2017-12-03T17:53:01Z
    - Add --nosickle to `anchr trim`
    - Use suffix of .sickle.fq.gz

0.4.6 2017-12-03T16:29:41Z
    - Add --uniq, --shuffle, and --scythe to `anchr trim`

0.4.5 2017-10-16T14:02:51Z
    - Single end mode for trim

0.4.4 2017-10-15T21:55:18Z
    - Use jellyfish@2.2.4. Jellyfish 2.2.6 from homebrew/science broke quorum.

0.4.3 2017-10-14T14:28:26Z
    - Add command `anchr localcor`