@@ -1,6 +1,8 @@
 Revision history for App-Anchr
 
 {{$NEXT}}
+    - Add command `anchr mergereads`
+    - Add gen_mergereads() to `anchr template`
 
 0.5.4 2017-12-23T22:39:37Z
     - Add gen_realClean() and gen_insertSize() to `anchr template`
